Bug 475518 - MathML layout code should use _moz* attributes instead of -moz-* attributes. r=karlt, sr=bz